# entity-block

./: CMakeLists.txt  CrcGenerator.vhd  LICENSE.md  README.md  entity-block.pro  entityblock.cpp  entityblock.h  main.cpp
.github/workflows/: ccpp.yml  cmake.yml  qmake.yml
